Atualizar links e botões para navegação e ações em várias páginas, substituindo botões por links para melhorar a usabilidade e a consistência do design.

--- a/index.html
+++ b/index.html
@@ -30,12 +30,8 @@
               com apenas alguns cliques.
             </p>
             <div class="d-flex gap-3 mb-4">
-              <button class="btn btn-outline-light btn-lg">
-                Como Funciona
-              </button>
-              <button class="btn btn-outline-light btn-lg">
-                Encontrar Farmácias
-              </button>
+              <a href="#" class="btn btn-outline-light btn-lg">Como Funciona</a>
+              <a href="/pages/usuario/public/produtos/explorarprodutos.html" class="btn btn-outline-light btn-lg">Encontrar Farmácias</a>
             </div>
             <div class="d-flex flex-wrap gap-4 fs-6 opacity-75">
               <span
@@ -62,21 +58,20 @@
         rapidamente
       </p>
       <div class="input-group mb-5 mx-auto" style="max-width: 700px">
-        <span class="input-group-text bg-white border-end-0"
-          ><i class="fas fa-search text-muted"></i
-        ></span>
+        <span class="input-group-text bg-white border-end-0">
+          <a href="pages/usuario/public/produtos/pesquisa.html">
+            <i class="fas fa-search text-muted"></i>
+          </a>
+        </span>
         <input
           type="text"
           class="form-control border-start-0 py-2"
           placeholder="Pesquisar medicamentos, cosméticos..."
         />
       </div>
-      <div class="row row-cols-2 row-cols-md-4 g-4 mb-4">
+  <div class="row row-cols-2 row-cols-md-4 g-4 mb-4">
         <div class="col">
-          <a
-            href="#"
-            class="card h-100 text-decoration-none shadow-sm p-3 text-dark category-card-custom"
-          >
+          <a href="/pages/usuario/public/produtos/explorarprodutos.html" class="card h-100 text-decoration-none shadow-sm p-3 text-dark category-card-custom">
             <div class="card-body text-center">
               <div class="icon-circle-custom mb-2">
                 <i class="fas fa-prescription-bottle-alt"></i>
@@ -90,10 +85,7 @@
           </a>
         </div>
         <div class="col">
-          <a
-            href="#"
-            class="card h-100 text-decoration-none shadow-sm p-3 text-dark category-card-custom"
-          >
+          <a href="/pages/usuario/public/produtos/explorarprodutos.html" class="card h-100 text-decoration-none shadow-sm p-3 text-dark category-card-custom">
             <div class="card-body">
               <div class="icon-circle-custom mb-2">
                 <i class="fas fa-spa"></i>
@@ -107,10 +99,7 @@
           </a>
         </div>
         <div class="col">
-          <a
-            href="#"
-            class="card h-100 text-decoration-none shadow-sm p-3 text-dark category-card-custom"
-          >
+          <a href="/pages/usuario/public/produtos/explorarprodutos.html" class="card h-100 text-decoration-none shadow-sm p-3 text-dark category-card-custom">
             <div class="card-body">
               <div class="icon-circle-custom mb-2">
                 <i class="fas fa-baby"></i>
@@ -124,10 +113,7 @@
           </a>
         </div>
         <div class="col">
-          <a
-            href="#"
-            class="card h-100 text-decoration-none shadow-sm p-3 text-dark category-card-custom"
-          >
+          <a href="/pages/usuario/public/produtos/explorarprodutos.html" class="card h-100 text-decoration-none shadow-sm p-3 text-dark category-card-custom">
             <div class="card-body">
               <div class="icon-circle-custom mb-2">
                 <i class="fas fa-seedling"></i>
@@ -141,10 +127,7 @@
           </a>
         </div>
         <div class="col">
-          <a
-            href="#"
-            class="card h-100 text-decoration-none shadow-sm p-3 text-dark category-card-custom"
-          >
+          <a href="/pages/usuario/public/produtos/explorarprodutos.html" class="card h-100 text-decoration-none shadow-sm p-3 text-dark category-card-custom">
             <div class="card-body">
               <div class="icon-circle-custom mb-2">
                 <i class="fas fa-heartbeat"></i>
@@ -158,10 +141,7 @@
           </a>
         </div>
         <div class="col">
-          <a
-            href="#"
-            class="card h-100 text-decoration-none shadow-sm p-3 text-dark category-card-custom"
-          >
+          <a href="/pages/usuario/public/produtos/explorarprodutos.html" class="card h-100 text-decoration-none shadow-sm p-3 text-dark category-card-custom">
             <div class="card-body">
               <div class="icon-circle-custom mb-2">
                 <i class="fas fa-hand-holding-medical"></i>
@@ -209,9 +189,7 @@
           </a>
         </div>
       </div>
-      <button class="btn btn-secondary py-2 px-4 fw-bold">
-        Explorar Produtos
-      </button>
+      <a href="/pages/usuario/public/produtos/explorarprodutos.html" class="btn btn-secondary py-2 px-4 fw-bold">Explorar Produtos</a>
     </section>
     <section class="container text-center py-5">
       <h2 class="fw-bold mb-1">Farmácias Parceiras</h2>
@@ -247,9 +225,7 @@
                 >Cosméticos</span
               >
             </div>
-            <button class="btn btn-outline-primary fw-bold w-100">
-              Ver Produtos
-            </button>
+            <a href="/pages/usuario/public/produtos/explorarprodutos.html" class="btn btn-outline-primary fw-bold w-100 text-decoration-none">Ver Produtos</a>
           </div>
         </div>
         <div class="col">
@@ -282,9 +258,7 @@
                 >Zamartin</span
               >
             </div>
-            <button class="btn btn-outline-primary fw-bold w-100">
-              Ver Produtos
-            </button>
+            <a href="/pages/usuario/public/produtos/explorarprodutos.html" class="btn btn-outline-primary fw-bold w-100 text-decoration-none">Ver Produtos</a>
           </div>
         </div>
         <div class="col">
@@ -315,9 +289,7 @@
                 >Dermocosméticos</span
               >
             </div>
-            <button class="btn btn-outline-primary fw-bold w-100">
-              Ver Produtos
-            </button>
+            <a href="/pages/usuario/public/produtos/explorarprodutos.html" class="btn btn-outline-primary fw-bold w-100 text-decoration-none">Ver Produtos</a>
           </div>
         </div>
         <div class="col">
@@ -348,9 +320,7 @@
                 >Suplementos</span
               >
             </div>
-            <button class="btn btn-outline-primary fw-bold w-100">
-              Ver Produtos
-            </button>
+            <a href="/pages/usuario/public/produtos/explorarprodutos.html" class="btn btn-outline-primary fw-bold w-100 text-decoration-none">Ver Produtos</a>
           </div>
         </div>
       </div>
@@ -362,13 +332,17 @@
         negócio como farmácia parceira
       </p>
       <div class="d-flex justify-content-center gap-3">
-        <button class="btn btn-secondary py-2 px-4 fw-bold">
-          Seja um Entregador
-        </button>
-        <button class="btn btn-primary py-2 px-4 fw-bold">
-          Seja uma Farmácia Parceira
-        </button>
-      </div>
+        <a href="#">
+          <button class="btn btn-secondary py-2 px-4 fw-bold">
+            Seja um Entregador
+          </button>
+        </a>
+        <a href="#">
+          <button class="btn btn-primary py-2 px-4 fw-bold">
+            Seja uma Farmácia Parceira
+          </button>
+        </div>
+        </a>
     </section>
     <div data-include="/pages/usuario/public/footer.html"></div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
