--- a/pages/usuario/public/compra/carrinho.html
+++ b/pages/usuario/public/compra/carrinho.html
@@ -193,12 +193,8 @@
               >Estimativa baseada na localização</small
             >
 
-            <button class="btn custom-btn-primary w-100 fw-bold py-2 mt-2">
-              Finalizar Compra
-            </button>
-            <button class="btn custom-btn-dark-blue w-100 fw-bold py-2 mt-2">
-              Continuar Comprando
-            </button>
+            <a href="/pages/usuario/public/compra/metododepagamento.html" class="btn custom-btn-primary w-100 fw-bold py-2 mt-2 text-decoration-none">Finalizar Compra</a>
+            <a href="/pages/usuario/public/produtos/explorarprodutos.html" class="btn custom-btn-dark-blue w-100 fw-bold py-2 mt-2 text-decoration-none">Continuar Comprando</a>
           </div>
         </div>
       </div>
