--- a/pages/usuario/public/compra/confirmpagamento.html
+++ b/pages/usuario/public/compra/confirmpagamento.html
@@ -95,7 +95,7 @@
             <p class="text-muted small">
               Receba atualizações em tempo real sobre sua entrega
             </p>
-            <button class="btn btn-primary w-100">Rastrear Entrega</button>
+            <a href="/pages/usuario/public/compra/pedidos.html" class="btn btn-primary w-100 text-decoration-none">Rastrear Entrega</a>
           </div>
           <div
             class="cartao-acao text-center p-3 mb-4 border rounded shadow-sm"
@@ -105,7 +105,7 @@
             <p class="text-muted small">
               Explore mais produtos em nossas farmácias parceiras
             </p>
-            <button class="btn btn-outline-primary w-100">Ver Produtos</button>
+            <a href="/pages/usuario/public/produtos/explorarprodutos.html" class="btn btn-outline-primary w-100 text-decoration-none">Ver Produtos</a>
           </div>
           <div
             class="cartao-acao text-center p-3 mb-4 border rounded shadow-sm"
@@ -115,9 +115,7 @@
             <p class="text-muted small">
               Nossa equipe está pronta para te atender
             </p>
-            <button class="btn btn-outline-success w-100">
-              Falar com Suporte
-            </button>
+            <a href="mailto:contato@farmavite.com" class="btn btn-outline-success w-100 text-decoration-none">Falar com Suporte</a>
           </div>
         </div>
       </div>
