--- a/pages/usuario/public/compra/metododepagamento.html
+++ b/pages/usuario/public/compra/metododepagamento.html
@@ -311,12 +311,17 @@
                 </div>
               </div>
             </div>
-            <button class="btn btn-primary w-100 mb-3 fs-5 btn-finalizar">
-              Finalizar Pagamento
-            </button>
-            <button class="btn btn-outline-primary w-100 fs-5">
-              Continuar Comprando
-            </button>
+            <a href="../compra/confirmpagamento.html">
+              <button class="btn btn-primary w-100 mt-auto pt-2 fw-bold">
+                Finalizar Pagamento
+              </button>
+            </a>
+            <br>
+            <a href="../produtos/explorarprodutos.html" >
+              <button class="btn btn-outline-primary w-100 fs-5 text-decoration-none">
+                Continuar Comprando
+              </button>
+            </a>
           </div>
         </div>
       </div>
