--- a/pages/usuario/public/footer.html
+++ b/pages/usuario/public/footer.html
@@ -20,20 +20,16 @@
         <h5 class="fw-bold mb-3">Links Rápidos</h5>
         <ul class="list-unstyled small">
           <li>
-            <a href="#" class="text-decoration-none text-light">Farmácias</a>
+            <a href="/pages/usuario/public/produtos/explorarprodutos.html" class="text-decoration-none text-light">Farmácias</a>
           </li>
           <li>
-            <a href="#" class="text-decoration-none text-light">Produtos</a>
+            <a href="/pages/usuario/public/produtos/explorarprodutos.html" class="text-decoration-none text-light">Produtos</a>
           </li>
           <li>
-            <a href="#" class="text-decoration-none text-light"
-              >Seja Entregador</a
-            >
+            <a href="/pages/auth/cadastro.html" class="text-decoration-none text-light">Seja Entregador</a>
           </li>
           <li>
-            <a href="#" class="text-decoration-none text-light"
-              >Seja Parceiro</a
-            >
+            <a href="/pages/auth/cadastro.html" class="text-decoration-none text-light">Seja Parceiro</a>
           </li>
         </ul>
       </div>
@@ -70,13 +66,9 @@
     >
       <p class="mb-0">© 2024 FarmaVite. Todos os direitos reservados.</p>
       <div class="links-politicas mt-2 mt-md-0">
-        <a href="#" class="text-white text-decoration-none me-3"
-          >Termos de Uso</a
-        >
-        <a href="#" class="text-white text-decoration-none me-3"
-          >Política de Privacidade</a
-        >
-        <a href="#" class="text-white text-decoration-none">Ajuda</a>
+        <a href="#" class="text-white text-decoration-none me-3">Termos de Uso</a>
+        <a href="#" class="text-white text-decoration-none me-3">Política de Privacidade</a>
+        <a href="mailto:contato@farmavite.com" class="text-white text-decoration-none">Ajuda</a>
       </div>
     </div>
   </div>
