--- a/pages/usuario/public/produtos/explorarprodutos.html
+++ b/pages/usuario/public/produtos/explorarprodutos.html
@@ -88,9 +88,11 @@
               >
                 R$ 35,90
               </p>
-              <button class="btn btn-primary w-100 btn-adicionar">
-                Adicionar ao Carrinho
-              </button>
+              <a href="../compra/carrinho.html">
+                <button class="btn btn-primary w-100 mt-auto pt-2 fw-bold">
+                  Adicionar ao Carrinho
+                </button>
+              </a>
             </div>
           </div>
         </div>
@@ -121,9 +123,11 @@
               >
                 R$ 45,80
               </p>
-              <button class="btn btn-primary w-100 btn-adicionar">
-                Adicionar ao Carrinho
-              </button>
+              <a href="../compra/carrinho.html">
+                <button class="btn btn-primary w-100 mt-auto pt-2 fw-bold">
+                  Adicionar ao Carrinho
+                </button>
+              </a>
             </div>
           </div>
         </div>
@@ -154,9 +158,11 @@
               >
                 R$ 52,90
               </p>
-              <button class="btn btn-primary w-100 btn-adicionar">
-                Adicionar ao Carrinho
-              </button>
+              <a href="../compra/carrinho.html">
+                <button class="btn btn-primary w-100 mt-auto pt-2 fw-bold">
+                  Adicionar ao Carrinho
+                </button>
+              </a>
             </div>
           </div>
         </div>
@@ -189,9 +195,11 @@
               >
                 R$ 55,90
               </p>
-              <button class="btn btn-primary w-100 btn-adicionar">
-                Adicionar ao Carrinho
-              </button>
+              <a href="../compra/carrinho.html">
+                <button class="btn btn-primary w-100 mt-auto pt-2 fw-bold">
+                  Adicionar ao Carrinho
+                </button>
+              </a>
             </div>
           </div>
         </div>
@@ -222,9 +230,11 @@
               >
                 R$ 69,90
               </p>
-              <button class="btn btn-primary w-100 btn-adicionar">
-                Adicionar ao Carrinho
-              </button>
+              <a href="../compra/carrinho.html">
+                <button class="btn btn-primary w-100 mt-auto pt-2 fw-bold">
+                  Adicionar ao Carrinho
+                </button>
+              </a>
             </div>
           </div>
         </div>
@@ -255,9 +265,11 @@
               >
                 R$ 89,90
               </p>
-              <button class="btn btn-primary w-100 btn-adicionar">
-                Adicionar ao Carrinho
-              </button>
+              <a href="../compra/carrinho.html">
+                <button class="btn btn-primary w-100 mt-auto pt-2 fw-bold">
+                  Adicionar ao Carrinho
+                </button>
+              </a>
             </div>
           </div>
         </div>
@@ -288,9 +300,11 @@
               >
                 R$ 119,90
               </p>
-              <button class="btn btn-primary w-100 btn-adicionar">
-                Adicionar ao Carrinho
-              </button>
+              <a href="../compra/carrinho.html">
+                <button class="btn btn-primary w-100 mt-auto pt-2 fw-bold">
+                  Adicionar ao Carrinho
+                </button>
+              </a>
             </div>
           </div>
         </div>
@@ -323,9 +337,11 @@
               >
                 R$ 159,90
               </p>
-              <button class="btn btn-primary w-100 btn-adicionar">
-                Adicionar ao Carrinho
-              </button>
+              <a href="../compra/carrinho.html">
+                <button class="btn btn-primary w-100 mt-auto pt-2 fw-bold">
+                  Adicionar ao Carrinho
+                </button>
+              </a>
             </div>
           </div>
         </div>
