--- a/pages/usuario/public/produtos/pesquisa.html
+++ b/pages/usuario/public/produtos/pesquisa.html
@@ -85,9 +85,11 @@
               <small class="text-decoration-line-through text-muted"
                 >R$ 36,30</small
               >
-              <button class="btn btn-primary w-100 mt-auto pt-2 fw-bold">
-                Adicionar ao Carrinho
-              </button>
+              <a href="../compra/carrinho.html">
+                <button class="btn btn-primary w-100 mt-auto pt-2 fw-bold">
+                  Adicionar ao Carrinho
+                </button>
+              </a>
             </div>
           </div>
         </div>
@@ -129,9 +131,11 @@
               <small class="text-decoration-line-through text-muted"
                 >R$ 49,90</small
               >
-              <button class="btn btn-primary w-100 mt-auto pt-2 fw-bold">
-                Adicionar ao Carrinho
-              </button>
+              <a href="../compra/carrinho.html">
+                <button class="btn btn-primary w-100 mt-auto pt-2 fw-bold">
+                  Adicionar ao Carrinho
+                </button>
+              </a>
             </div>
           </div>
         </div>
@@ -173,9 +177,11 @@
               <small class="text-decoration-line-through text-muted"
                 >R$ 56,90</small
               >
-              <button class="btn btn-primary w-100 mt-auto pt-2 fw-bold">
-                Adicionar ao Carrinho
-              </button>
+              <a href="../compra/carrinho.html">
+                <button class="btn btn-primary w-100 mt-auto pt-2 fw-bold">
+                  Adicionar ao Carrinho
+                </button>
+              </a>
             </div>
           </div>
         </div>
@@ -217,9 +223,11 @@
               <small class="text-decoration-line-through text-muted"
                 >R$ 59,90</small
               >
-              <button class="btn btn-primary w-100 mt-auto pt-2 fw-bold">
-                Adicionar ao Carrinho
-              </button>
+              <a href="../compra/carrinho.html">
+                <button class="btn btn-primary w-100 mt-auto pt-2 fw-bold">
+                  Adicionar ao Carrinho
+                </button>
+              </a>
             </div>
           </div>
         </div>
@@ -261,9 +269,11 @@
               <small class="text-decoration-line-through text-muted"
                 >R$ 68,90</small
               >
-              <button class="btn btn-primary w-100 mt-auto pt-2 fw-bold">
-                Adicionar ao Carrinho
-              </button>
+              <<a href="../compra/carrinho.html">
+                <button class="btn btn-primary w-100 mt-auto pt-2 fw-bold">
+                  Adicionar ao Carrinho
+                </button>
+              </a>
             </div>
           </div>
         </div>
@@ -305,9 +315,11 @@
               <small class="text-decoration-line-through text-muted"
                 >R$ 89,90</small
               >
-              <button class="btn btn-primary w-100 mt-auto pt-2 fw-bold">
-                Adicionar ao Carrinho
-              </button>
+              <a href="../compra/carrinho.html">
+                <button class="btn btn-primary w-100 mt-auto pt-2 fw-bold">
+                  Adicionar ao Carrinho
+                </button>
+              </a>
             </div>
           </div>
         </div>
@@ -349,9 +361,11 @@
               <small class="text-decoration-line-through text-muted"
                 >R$ 119,90</small
               >
-              <button class="btn btn-primary w-100 mt-auto pt-2 fw-bold">
-                Adicionar ao Carrinho
-              </button>
+              <a href="../compra/carrinho.html">
+                <button class="btn btn-primary w-100 mt-auto pt-2 fw-bold">
+                  Adicionar ao Carrinho
+                </button>
+              </a>
             </div>
           </div>
         </div>
@@ -393,9 +407,11 @@
               <small class="text-decoration-line-through text-muted"
                 >R$ 179,90</small
               >
-              <button class="btn btn-primary w-100 mt-auto pt-2 fw-bold">
-                Adicionar ao Carrinho
-              </button>
+              <a href="../compra/carrinho.html">
+                <button class="btn btn-primary w-100 mt-auto pt-2 fw-bold">
+                  Adicionar ao Carrinho
+                </button>
+              </a>
             </div>
           </div>
         </div>
