--- a/pages/usuario/public/nav.html
+++ b/pages/usuario/public/nav.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg bg-white border-bottom py-3">
   <div class="container">
-    <a class="navbar-brand logo" href="#">
+    <a class="navbar-brand logo" href="/index.html">
       <i class="fas fa-prescription-bottle-alt me-1"></i> FarmaVite
     </a>
     <button
@@ -16,29 +16,29 @@
     </button>
     <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
       <ul class="navbar-nav mb-2 mb-lg-0">
-        <li class="nav-item"><a class="nav-link" href="#">Farmácias</a></li>
-        <li class="nav-item"><a class="nav-link" href="#">Produtos</a></li>
+        <li class="nav-item"><a class="nav-link" href="/pages/usuario/public/produtos/explorarprodutos.html">Farmácias</a></li>
+        <li class="nav-item"><a class="nav-link" href="/pages/usuario/public/produtos/explorarprodutos.html">Produtos</a></li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Seja Entregador</a>
+          <a class="nav-link" href="/pages/auth/cadastro.html">Seja Entregador</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Seja Parceiro</a>
+          <a class="nav-link" href="/pages/auth/cadastro.html">Seja Parceiro</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Meus Pedidos</a>
+          <a class="nav-link" href="/pages/usuario/public/compra/pedidos.html">Meus Pedidos</a>
         </li>
       </ul>
     </div>
     <div class="d-flex align-items-center">
-      <a href="#" class="btn me-3 icone-btn"><i class="fas fa-user"></i></a>
-      <a href="#" class="btn me-3 carrinho-btn position-relative">
+      <a href="/pages/auth/login.html" class="btn me-3 icone-btn"><i class="fas fa-user"></i></a>
+      <a href="/pages/usuario/public/compra/carrinho.html" class="btn me-3 carrinho-btn position-relative">
         <i class="fas fa-shopping-cart"></i>
         <span
           class="position-absolute top-0 start-100 translate-middle badge rounded-circle bg-primary contagem-carrinho"
           >1</span
         >
       </a>
-      <a href="#" class="btn btn-primary">Cadastrar</a>
+      <a href="/pages/auth/cadastro.html" class="btn btn-primary">Cadastrar</a>
     </div>
   </div>
 </nav>
