Adicionar navegação e rodapé para a área do entregador, incluindo estilos e scripts para carregamento dinâmico de fragmentos HTML.

--- a/pages/usuario/public/nav.html
+++ b/pages/usuario/public/nav.html
@@ -30,7 +30,7 @@
       </ul>
     </div>
     <div class="d-flex align-items-center">
-      <a href="/pages/auth/login.html" class="btn me-3 icone-btn"><i class="fas fa-user"></i></a>
+      <a href="/pages/usuario/private/dados.html" class="btn me-3 icone-btn"><i class="fas fa-user"></i></a>
       <a href="/pages/usuario/public/compra/carrinho.html" class="btn me-3 carrinho-btn position-relative">
         <i class="fas fa-shopping-cart"></i>
         <span
