Atualizar navegação do entregador e adicionar layout inicial ao painel, incluindo novos estilos para os cartões de ação.

--- a/pages/entregador/public/tela-inicial.html
+++ b/pages/entregador/public/tela-inicial.html
@@ -26,7 +26,68 @@
     <div
       data-include-entregador="/pages/entregador/nav-entregadores.html"
     ></div>
-    <main></main>
+    <main>
+      <div class="container py-5">
+        <div class="text-center mb-4">
+          <h1 class="fw-bold">Olá, entregador!</h1>
+          <p class="text-muted">Bem-vindo ao painel do entregador</p>
+        </div>
+        <div class="row entregador-grid g-4 justify-content-center">
+          <div class="col-12 col-sm-6 col-md-6 col-lg-6">
+            <a href="#" class="entregador-card d-block p-3 text-decoration-none text-dark bg-white shadow-sm h-100">
+              <div class="d-flex align-items-center gap-3">
+                <div class="icon-circle bg-warning text-white">
+                  <i class="fas fa-motorcycle" aria-hidden="true"></i>
+                </div>
+                <div>
+                  <h5 class="mb-1">Aceitar Entregas</h5>
+                  <p class="mb-0 small text-muted">Veja novas solicitações e aceite as que desejar</p>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="col-12 col-sm-6 col-md-6 col-lg-6">
+            <a href="#" class="entregador-card d-block p-3 text-decoration-none text-dark bg-white shadow-sm h-100">
+              <div class="d-flex align-items-center gap-3">
+                <div class="icon-circle bg-info text-white">
+                  <i class="fas fa-user"></i>
+                </div>
+                <div>
+                  <h5 class="mb-1">Meus Dados</h5>
+                  <p class="mb-0 small text-muted">Atualize seu perfil e documentos</p>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="col-12 col-sm-6 col-md-6 col-lg-6">
+            <a href="#" class="entregador-card d-block p-3 text-decoration-none text-dark bg-white shadow-sm h-100">
+              <div class="d-flex align-items-center gap-3">
+                <div class="icon-circle bg-success text-white">
+                  <i class="fas fa-dollar-sign"></i>
+                </div>
+                <div>
+                  <h5 class="mb-1">Financeiro</h5>
+                  <p class="mb-0 small text-muted">Confira ganhos e extratos</p>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="col-12 col-sm-6 col-md-6 col-lg-6">
+            <a href="#" class="entregador-card d-block p-3 text-decoration-none text-dark bg-white shadow-sm h-100">
+              <div class="d-flex align-items-center gap-3">
+                <div class="icon-circle bg-secondary text-white">
+                  <i class="fas fa-car"></i>
+                </div>
+                <div>
+                  <h5 class="mb-1">Dados do Veículo</h5>
+                  <p class="mb-0 small text-muted">Cadastre e atualize informações do veículo</p>
+                </div>
+              </div>
+            </a>
+          </div>
+        </div>
+      </div>
+    </main>
     <div
       data-include-entregador="/pages/entregador/footer-entregadores.html"
     ></div>
