--- a/pages/entregador/nav-entregadores.html
+++ b/pages/entregador/nav-entregadores.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg bg-white border-bottom py-3">
   <div class="container">
-    <a class="navbar-brand logo" href="/index.html">
+    <a class="navbar-brand logo" href="public/tela-inicial.html">
       <i class="fas fa-prescription-bottle-alt me-1"></i> FarmaVite
     </a>
     <button
