--- a/pages/entregador/nav-entregadores.html
+++ b/pages/entregador/nav-entregadores.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg bg-white border-bottom py-3">
   <div class="container">
-    <a class="navbar-brand logo" href="public/tela-inicial.html">
+    <a class="navbar-brand logo" href="/pages/entregador/public/tela-inicial.html">
       <i class="fas fa-prescription-bottle-alt me-1"></i> FarmaVite
     </a>
     <button
@@ -16,7 +16,7 @@
     </button>
     <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
       <ul class="navbar-nav mb-2 mb-lg-0">
-        <li class="nav-item"><a class="nav-link" href="#">Aceitar Entregas</a></li>
+        <li class="nav-item"><a class="nav-link" href="/pages/entregador/public/entregas.html">Aceitar Entregas</a></li>
         <li class="nav-item">
           <a class="nav-link" href="#">Meus Dados</a>
         </li>
@@ -29,9 +29,8 @@
       </ul>
     </div>
     <div class="d-flex align-items-center">
-      <a href="auth/login-entregador.html" class="btn me-3 icone-btn"><i class="fas fa-user"></i></a>
-      </a>
-      <a href="auth/cadastro-entregador.html" class="btn btn-primary">Cadastrar</a>
+      <a href="/pages/entregador/auth/login-entregador.html" class="btn me-3 icone-btn" aria-label="login entregador"><i class="fas fa-user"></i></a>
+      <a href="/pages/entregador/auth/cadastro-entregador.html" class="btn btn-primary">Cadastrar</a>
     </div>
   </div>
 </nav>
