Atualizar links de navegação e adicionar novas páginas para a área do entregador, incluindo estilos e estrutura HTML.

--- a/pages/entregador/public/tela-inicial.html
+++ b/pages/entregador/public/tela-inicial.html
@@ -34,7 +34,7 @@
         </div>
         <div class="row entregador-grid g-4 justify-content-center">
           <div class="col-12 col-sm-6 col-md-6 col-lg-6">
-            <a href="#" class="entregador-card d-block p-3 text-decoration-none text-dark bg-white shadow-sm h-100">
+            <a href="/pages/entregador/public/entregas.html" class="entregador-card d-block p-3 text-decoration-none text-dark bg-white shadow-sm h-100">
               <div class="d-flex align-items-center gap-3">
                 <div class="icon-circle bg-warning text-white">
                   <i class="fas fa-motorcycle" aria-hidden="true"></i>
@@ -47,7 +47,7 @@
             </a>
           </div>
           <div class="col-12 col-sm-6 col-md-6 col-lg-6">
-            <a href="#" class="entregador-card d-block p-3 text-decoration-none text-dark bg-white shadow-sm h-100">
+            <a href="/pages/entregador/private/dados-entregador.html" class="entregador-card d-block p-3 text-decoration-none text-dark bg-white shadow-sm h-100">
               <div class="d-flex align-items-center gap-3">
                 <div class="icon-circle bg-info text-white">
                   <i class="fas fa-user"></i>
@@ -60,7 +60,7 @@
             </a>
           </div>
           <div class="col-12 col-sm-6 col-md-6 col-lg-6">
-            <a href="#" class="entregador-card d-block p-3 text-decoration-none text-dark bg-white shadow-sm h-100">
+            <a href="/pages/entregador/private/financeiro.html" class="entregador-card d-block p-3 text-decoration-none text-dark bg-white shadow-sm h-100">
               <div class="d-flex align-items-center gap-3">
                 <div class="icon-circle bg-success text-white">
                   <i class="fas fa-dollar-sign"></i>
@@ -73,7 +73,7 @@
             </a>
           </div>
           <div class="col-12 col-sm-6 col-md-6 col-lg-6">
-            <a href="#" class="entregador-card d-block p-3 text-decoration-none text-dark bg-white shadow-sm h-100">
+            <a href="/pages/entregador/private/dadosveiculo-entregador.html" class="entregador-card d-block p-3 text-decoration-none text-dark bg-white shadow-sm h-100">
               <div class="d-flex align-items-center gap-3">
                 <div class="icon-circle bg-secondary text-white">
                   <i class="fas fa-car"></i>
