--- a/pages/entregador/auth/login-entregador.html
+++ b/pages/entregador/auth/login-entregador.html
@@ -32,7 +32,7 @@
                         <a href="alterarSenha/alterarsenha-entregador.html">Esqueci minha senha</a>
                     </div>
                 </form>
-                <a href="#"><button>Entrar</button></a>
+                <a href="/pages/entregador/public/tela-inicial.html"><button>Entrar</button></a>
                 <p class="cadastro">Não tem conta? <a href="cadastro-entregador.html">Cadastrar-se aqui</a></p>
             </div>
         </div>
