--- a/pages/entregador/footer-entregadores.html
+++ b/pages/entregador/footer-entregadores.html
@@ -25,16 +25,16 @@
         <h5 class="fw-bold mb-3">Acesso Rápido</h5>
         <ul class="list-unstyled small">
           <li class="nav-item">
-            <a class="nav-link" href="#">Aceitar Entregas</a>
+            <a class="nav-link" href="/pages/entregador/public/entregas.html">Aceitar Entregas</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Meus Dados</a>
+            <a class="nav-link" href="/pages/entregador/private/dados-entregador.html">Meus Dados</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Dados do veiculo</a>
+            <a class="nav-link" href="/pages/entregador/private/dadosveiculo-entregador.html">Dados do veiculo</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Financeiro</a>
+            <a class="nav-link" href="/pages/entregador/private/financeiro.html">Financeiro</a>
           </li>
         </ul>
       </div>
