--- a/pages/entregador/nav-entregadores.html
+++ b/pages/entregador/nav-entregadores.html
@@ -18,13 +18,13 @@
       <ul class="navbar-nav mb-2 mb-lg-0">
         <li class="nav-item"><a class="nav-link" href="/pages/entregador/public/entregas.html">Aceitar Entregas</a></li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Meus Dados</a>
+          <a class="nav-link" href="/pages/entregador/private/dados-entregador.html">Meus Dados</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Dados do veiculo</a>
+          <a class="nav-link" href="/pages/entregador/private/dadosveiculo-entregador.html">Dados do veiculo</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Financeiro</a>
+          <a class="nav-link" href="/pages/entregador/private/financeiro.html">Financeiro</a>
         </li>
       </ul>
     </div>
