--- a/pages/usuario/public/footer.html
+++ b/pages/usuario/public/footer.html
@@ -26,7 +26,7 @@
             <a href="/pages/usuario/public/produtos/explorarprodutos.html" class="text-decoration-none text-light">Produtos</a>
           </li>
           <li>
-            <a href="/pages/auth/cadastro.html" class="text-decoration-none text-light">Seja Entregador</a>
+            <a href="/pages/entregador/auth/cadastro-entregador.html" class="text-decoration-none text-light">Seja Entregador</a>
           </li>
           <li>
             <a href="/pages/auth/cadastro.html" class="text-decoration-none text-light">Seja Parceiro</a>
