--- a/pages/usuario/public/nav.html
+++ b/pages/usuario/public/nav.html
@@ -19,7 +19,7 @@
         <li class="nav-item"><a class="nav-link" href="/pages/usuario/public/produtos/explorarprodutos.html">Farmácias</a></li>
         <li class="nav-item"><a class="nav-link" href="/pages/usuario/public/produtos/explorarprodutos.html">Produtos</a></li>
         <li class="nav-item">
-          <a class="nav-link" href="/pages/auth/cadastro.html">Seja Entregador</a>
+          <a class="nav-link" href="/pages/entregador/auth/cadastro-entregador.html">Seja Entregador</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/pages/auth/cadastro.html">Seja Parceiro</a>
