--- a/pages/entregador/private/dados-entregador.html
+++ b/pages/entregador/private/dados-entregador.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -15,6 +15,7 @@
       rel="stylesheet"
       href="../../../style/entregador/public/entregas.css"
     />
+    <link rel="stylesheet" href="../../../style/entregador/private/dados-entregador.css" />
     <link
       rel="shortcut icon"
       href="../../../img/favicon.ico"
@@ -27,11 +28,159 @@
       data-include-entregador="/pages/entregador/nav-entregadores.html"
     ></div>
     <main>
-
+      <section class="dados-hero">
+        <div class="container">
+          <h1>Meus Dados</h1>
+          <p class="text-white-50">Gerencie suas informações pessoais e mantenha seus dados sempre atualizados para garantir o melhor serviço.</p>
+        </div>
+      </section>
+      <section class="container tabs-wrapper">
+        <div class="row">
+          <div class="col-12">
+            <ul class="nav nav-tabs" role="tablist" id="dadosTabs">
+              <li class="nav-item" role="presentation">
+                <button class="nav-link active" data-target="#tab-pessoal" type="button">Dados Pessoais</button>
+              </li>
+              <li class="nav-item" role="presentation">
+                <button class="nav-link" data-target="#tab-endereco" type="button">Endereço</button>
+              </li>
+              <li class="nav-item" role="presentation">
+                <button class="nav-link" data-target="#tab-documentos" type="button">Documentos</button>
+              </li>
+            </ul>
+            <div class="tab-content mt-4">
+              <div class="tab-pane active" id="tab-pessoal" role="tabpanel">
+                <div class="dados-card">
+                  <h5>Informações Pessoais</h5>
+                  <form>
+                    <div class="row g-3 mt-2">
+                      <div class="col-md-6">
+                        <label class="form-label">Nome Completo</label>
+                        <input class="form-control" id="nome" value="João Silva Santos" />
+                      </div>
+                      <div class="col-md-6">
+                        <label class="form-label">E-mail</label>
+                        <input class="form-control" id="email" value="joao.santos@example.com" />
+                      </div>
+                      <div class="col-md-6">
+                        <label class="form-label">Telefone</label>
+                        <input class="form-control" id="telefone" value="(11) 91234-5678" />
+                      </div>
+                      <div class="col-md-6">
+                        <label class="form-label">CPF</label>
+                        <input class="form-control" id="cpf" value="123.456.789-00" />
+                      </div>
+                      <div class="col-md-6">
+                        <label class="form-label">Data de Nascimento</label>
+                        <input class="form-control" id="nasc" value="1990-04-15" />
+                      </div>
+                    </div>
+                  </form>
+                </div>
+              </div>
+              <div class="tab-pane" id="tab-endereco" role="tabpanel">
+                <div class="dados-card">
+                  <h5>Endereço</h5>
+                  <form>
+                    <div class="row g-3 mt-2">
+                      <div class="col-12">
+                        <label class="form-label">Endereço Completo</label>
+                        <input class="form-control" id="endereco" value="Rua das Flores, 123 - Apto 12" />
+                      </div>
+                      <div class="col-md-4">
+                        <label class="form-label">Bairro</label>
+                        <input class="form-control" id="bairro" value="Centro" />
+                      </div>
+                      <div class="col-md-4">
+                        <label class="form-label">CEP</label>
+                        <input class="form-control" id="cep" value="01001-000" />
+                      </div>
+                      <div class="col-md-4">
+                        <label class="form-label">Cidade</label>
+                        <input class="form-control" id="cidade" value="São Paulo" />
+                      </div>
+                      <div class="col-md-4">
+                        <label class="form-label">Estado</label>
+                        <select class="form-select" id="estado">
+                          <option selected>São Paulo</option>
+                          <option>Rio de Janeiro</option>
+                        </select>
+                      </div>
+                    </div>
+                  </form>
+                </div>
+              </div>
+              <div class="tab-pane" id="tab-documentos" role="tabpanel">
+                <div class="dados-card">
+                  <h5>Documentos</h5>
+                  <div class="mt-3">
+                    <div class="doc-item">
+                      <div class="doc-meta">
+                        <div>
+                          <strong>CNH - Carteira Nacional de Habilitação</strong>
+                          <div class="small text-muted">Documento obrigatório para entregadores</div>
+                        </div>
+                        <div>
+                          <span class="badge bg-success">Aprovado</span>
+                        </div>
+                      </div>
+                      <div class="doc-detalhes mt-2">
+                        <div class="small">Arquivo: cnh_joao_silva.pdf — Enviado em 15/03/2024</div>
+                        <div class="small mt-1">Validade: 10/2026</div>
+                      </div>
+                      <div class="mt-2 text-end">
+                        <button class="btn btn-outline-secondary btn-doc-detalhes">Ver Detalhes</button>
+                      </div>
+                    </div>
+                    <div class="doc-item">
+                      <div class="doc-meta">
+                        <div>
+                          <strong>Comprovante de Residência</strong>
+                          <div class="small text-muted">Documento com data dos últimos 3 meses</div>
+                        </div>
+                        <div>
+                          <span class="badge bg-success">Aprovado</span>
+                        </div>
+                      </div>
+                      <div class="doc-detalhes mt-2">
+                        <div class="small">Arquivo: comprovante_residencia.pdf — Enviado em 15/03/2024</div>
+                        <div class="small mt-1">Endereço conferido: Rua das Flores, 123</div>
+                      </div>
+                      <div class="mt-2 text-end">
+                        <button class="btn btn-outline-secondary btn-doc-detalhes">Ver Detalhes</button>
+                      </div>
+                    </div>
+                    <div class="doc-item">
+                      <div class="doc-meta">
+                        <div>
+                          <strong>Foto do Perfil</strong>
+                          <div class="small text-muted">Foto para identificação no aplicativo</div>
+                        </div>
+                        <div>
+                          <span class="badge bg-success">Aprovado</span>
+                        </div>
+                      </div>
+                      <div class="doc-detalhes mt-2">
+                        <div class="small">Arquivo: foto_perfil.jpg — Enviado em 15/03/2024</div>
+                        <div class="small mt-1">Tamanho: 120 KB</div>
+                      </div>
+                      <div class="mt-2 text-end">
+                        <button class="btn btn-outline-secondary btn-doc-detalhes">Ver Detalhes</button>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <br>
+          </div>
+        </div>
+      </section>
     </main>
     <div
       data-include-entregador="/pages/entregador/footer-entregadores.html"
     ></div>
+    <script src="/js/dados-entregador.js"></script>
     <script src="/js/entregas.js"></script>
     <script src="/js/includes-entregador.js"></script>
   </body>
