--- a/pages/entregador/private/financeiro.html
+++ b/pages/entregador/private/financeiro.html
@@ -15,6 +15,7 @@
       rel="stylesheet"
       href="../../../style/entregador/public/entregas.css"
     />
+    <link rel="stylesheet" href="../../../style/entregador/private/financeiro.css" />
     <link
       rel="shortcut icon"
       href="../../../img/favicon.ico"
@@ -27,12 +28,183 @@
       data-include-entregador="/pages/entregador/nav-entregadores.html"
     ></div>
     <main>
+      <section class="finance-hero">
+        <div class="container">
+          <h1>Financeiro</h1>
+          <p class="text-white-50">Acompanhe seus ganhos e histórico de entregas</p>
+        </div>
+      </section>
 
+      <section class="container my-4">
+        <div class="row g-4">
+          <div class="col-12 col-lg-8">
+            <div class="row finance-cards g-3 mb-3">
+              <div class="col-6 col-md-3">
+                <div class="card p-3">
+                  <small>Ganhos da Semana</small>
+                  <div class="h5 mt-2">R$ 142,45</div>
+                  <div class="small text-success">+12% vs semana anterior</div>
+                </div>
+              </div>
+              <div class="col-6 col-md-3">
+                <div class="card p-3">
+                  <small>Ganhos do Mês</small>
+                  <div class="h5 mt-2">R$ 567,80</div>
+                  <div class="small text-success">+8% vs anterior</div>
+                </div>
+              </div>
+              <div class="col-6 col-md-3">
+                <div class="card p-3">
+                  <small>Total de Entregas</small>
+                  <div class="h5 mt-2">23</div>
+                  <div class="small text-muted">Este mês</div>
+                </div>
+              </div>
+              <div class="col-6 col-md-3">
+                <div class="card p-3">
+                  <small>Média por Entrega</small>
+                  <div class="h5 mt-2">R$ 24,69</div>
+                  <div class="small text-muted">Média geral</div>
+                </div>
+              </div>
+            </div>
+
+            <div class="transacoes-card">
+              <div class="d-flex justify-content-between align-items-center mb-3">
+                <h5 class="mb-0">Histórico de Transações</h5>
+                <div class="filtro-group btn-group" role="group" aria-label="filtrar">
+                  <button class="btn btn-outline-primary btn-sm filtro active" data-filter="semana">Semana</button>
+                  <button class="btn btn-outline-primary btn-sm filtro" data-filter="mes">Mês</button>
+                  <button class="btn btn-outline-primary btn-sm filtro" data-filter="todos">Todos</button>
+                </div>
+              </div>
+
+              <div class="list-rows">
+                <div class="transacao-item" data-period="semana">
+                  <div class="transacao-meta">
+                    <div class="icon"><i class="fas fa-clipboard-list"></i></div>
+                    <div>
+                      <div><strong>Farmácia Central</strong></div>
+                      <div class="small text-muted">2024-01-15 — Endereço</div>
+                    </div>
+                  </div>
+                  <div class="text-end">
+                    <div class="valor-concluido">R$ 25,50</div>
+                    <div class="small text-success">Concluído</div>
+                  </div>
+                </div>
+
+                <div class="transacao-item" data-period="semana">
+                  <div class="transacao-meta">
+                    <div class="icon"><i class="fas fa-clipboard-list"></i></div>
+                    <div>
+                      <div><strong>Drogaria Popular</strong></div>
+                      <div class="small text-muted">2024-01-15 — Endereço</div>
+                    </div>
+                  </div>
+                  <div class="text-end">
+                    <div class="valor-concluido">R$ 18,75</div>
+                    <div class="small text-success">Concluído</div>
+                  </div>
+                </div>
+
+                <div class="transacao-item" data-period="semana">
+                  <div class="transacao-meta">
+                    <div class="icon"><i class="fas fa-clipboard-list"></i></div>
+                    <div>
+                      <div><strong>Farmácia Saúde</strong></div>
+                      <div class="small text-muted">2024-01-14 — Endereço</div>
+                    </div>
+                  </div>
+                  <div class="text-end">
+                    <div class="valor-concluido">R$ 32,00</div>
+                    <div class="small text-success">Concluído</div>
+                  </div>
+                </div>
+
+                <div class="transacao-item" data-period="semana">
+                  <div class="transacao-meta">
+                    <div class="icon"><i class="fas fa-star"></i></div>
+                    <div>
+                      <div><strong>Bônus Meta Semanal</strong></div>
+                      <div class="small text-muted">2024-01-14</div>
+                    </div>
+                  </div>
+                  <div class="text-end">
+                    <div class="valor-concluido">R$ 15,00</div>
+                    <div class="small text-success">Concluído</div>
+                  </div>
+                </div>
+
+                <div class="transacao-item" data-period="mes">
+                  <div class="transacao-meta">
+                    <div class="icon"><i class="fas fa-clipboard-list"></i></div>
+                    <div>
+                      <div><strong>Drogaria Express</strong></div>
+                      <div class="small text-muted">2024-01-12 — Endereço</div>
+                    </div>
+                  </div>
+                  <div class="text-end">
+                    <div class="valor-pendente">R$ 28,90</div>
+                    <div class="small text-warning">Pendente</div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-12 col-lg-4">
+            <div class="saldo-card mb-3">
+              <small>Saldo Disponível</small>
+              <div class="h4 mt-2">R$ 538,90</div>
+              <div class="mt-3">
+                <button class="btn btn-primary w-100" id="solicitarSaque">Solicitar Saque</button>
+              </div>
+              <div class="small text-muted mt-2">Valor pendente: <span class="text-warning">R$ 28,90</span></div>
+            </div>
+
+            <div class="meta-card">
+              <small>Metas e Bônus</small>
+              <div class="mt-2">
+                <div class="d-flex justify-content-between align-items-center mb-2">
+                  <div>Meta Semanal</div>
+                  <div class="text-success">Concluída</div>
+                </div>
+                <div class="progress mb-2" style="height:10px"><div class="progress-bar bg-success" role="progressbar" style="width:100%"></div></div>
+
+                <div class="d-flex justify-content-between align-items-center mb-2">
+                  <div>Meta Mensal</div>
+                  <div class="text-warning">38/60</div>
+                </div>
+                <div class="progress" style="height:10px"><div class="progress-bar bg-warning" role="progressbar" style="width:60%"></div></div>
+              </div>
+            </div>
+
+            <div class="acoes-rapidas mt-3">
+              <small>Ações Rápidas</small>
+                <ul class="list-group list-group-flush mt-2">
+                  <li class="list-group-item d-flex justify-content-between align-items-center">
+                    <div><i class="fas fa-file-alt me-2"></i>Gerar Relatório</div>
+                    <button id="gerarRelatorio" class="btn btn-sm btn-outline-secondary">Gerar</button>
+                  </li>
+                  <li class="list-group-item d-flex justify-content-between align-items-center">
+                    <div><i class="fas fa-download me-2"></i>Exportar Dados</div>
+                    <div>
+                      <button id="exportarCSV" class="btn btn-sm btn-outline-primary me-2">CSV</button>
+                      <button id="exportarJSON" class="btn btn-sm btn-outline-secondary">JSON</button>
+                    </div>
+                  </li>
+                </ul>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <div
       data-include-entregador="/pages/entregador/footer-entregadores.html"
     ></div>
-    <script src="/js/entregas.js"></script>
+  <script src="/js/entregas.js"></script>
+  <script src="/js/financeiro.js"></script>
     <script src="/js/includes-entregador.js"></script>
   </body>
 </html>
