feat: Adicionar novas páginas de Higienização e Minha Farmácia, incluindo componentes de navegação e rodapé
Criado higienizacao.html para monitoramento das atividades de limpeza, com KPIs e histórico de atividades.
Desenvolvido minhafarmacia.html para gerenciamento da farmácia, exibindo status e informações básicas.
Implementados componentes de navegação e rodapé para manter layout consistente entre as páginas.
Atualizados estilos CSS das novas páginas e componentes, garantindo design responsivo e consistência visual.
Adicionados arquivos JavaScript para as funcionalidades das páginas higienizacao e minhafarmacia.

--- a/pages/entregador/private/financeiro.html
+++ b/pages/entregador/private/financeiro.html
@@ -204,7 +204,7 @@
       data-include-entregador="/pages/entregador/footer-entregadores.html"
     ></div>
   <script src="/js/entregas.js"></script>
-  <script src="/js/financeiro.js"></script>
+  <script src="/js/financeiro-entregador.js"></script>
     <script src="/js/includes-entregador.js"></script>
   </body>
 </html>
