--- a/pages/usuario/public/footer.html
+++ b/pages/usuario/public/footer.html
@@ -29,7 +29,7 @@
             <a href="/pages/entregador/auth/cadastro-entregador.html" class="text-decoration-none text-light">Seja Entregador</a>
           </li>
           <li>
-            <a href="/pages/auth/cadastro.html" class="text-decoration-none text-light">Seja Parceiro</a>
+            <a href="/pages/farmacia/auth/cadastro-farmacia.html" class="text-decoration-none text-light">Seja Parceiro</a>
           </li>
         </ul>
       </div>
