--- a/pages/usuario/public/nav.html
+++ b/pages/usuario/public/nav.html
@@ -22,7 +22,7 @@
           <a class="nav-link" href="/pages/entregador/auth/cadastro-entregador.html">Seja Entregador</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/pages/auth/cadastro.html">Seja Parceiro</a>
+          <a class="nav-link" href="/pages/farmacia/auth/cadastro-farmacia.html">Seja Parceiro</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/pages/usuario/public/compra/pedidos.html">Meus Pedidos</a>
